--- a/src/main/resources/assets/sittable/lang/en_US.lang
+++ b/src/main/resources/assets/sittable/lang/en_US.lang
@@ -1,2 +1,2 @@
 msg.sittable.occupied=The seat is occupied
-msg.sittable.wrong_pose=You're not in the right pose
+msg.sittable.invalid=The seat is invalid
